Home page, project cards pages working

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 <body>
 
     <!-- Home nav icon -->
-	<a id="nav-icon-home" href="/index.html">
+	<a id="nav-icon-home" href="/">
 		<img id="nav-icon-home-img" src="static/img/home-icon.svg">
 	</a>
 
