Everything ported over from jakeg.cc

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
     <!-- Custom Javascript, implements event handlers, animation, etc. -->
-    <script src="static/js/index.js"></script>
+    <script src="/static/js/index.js"></script>
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" type="text/css" href="static/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
 </head>
 
@@ -54,7 +54,7 @@
 
             <!-- Icon -->
             <div class="icon-img-wrapper">
-                <img class="icon-img" src="static/img/index/about_icon.svg"/>    
+                <img class="icon-img" src="/static/img/index/about_icon.svg"/>    
             </div>
 
             <!-- Text -->
@@ -67,7 +67,7 @@
 
             <!-- Icon -->
             <div class="icon-img-wrapper">
-                <img class="icon-img" src="static/img/index/projects_icon.svg"/>    
+                <img class="icon-img" src="/static/img/index/projects_icon.svg"/>    
             </div>
 
             <!-- Text -->
@@ -80,7 +80,7 @@
 
             <!-- Icon -->
             <div class="icon-img-wrapper">
-                <img class="icon-img" src="static/img/index/blog_icon.svg"/>    
+                <img class="icon-img" src="/static/img/index/blog_icon.svg"/>    
             </div>
 
             <!-- Text -->
