--- a/projects.html
+++ b/projects.html
@@ -34,13 +34,13 @@
     <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i&display=swap" rel="stylesheet">
 
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="static/css/projects.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/projects.css">
 
     <!-- JQuery (loaded from Google hosted libraries) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
     <!-- Custom Javascript, implements event handlers, animation, etc. -->
-    <script src="static/js/projects.js"></script>
+    <script src="/static/js/projects.js"></script>
 
 
 </head>
@@ -49,7 +49,7 @@
 
     <!-- Home nav icon -->
 	<a id="nav-icon-home" href="/">
-		<img id="nav-icon-home-img" src="static/img/home-icon.svg">
+		<img id="nav-icon-home-img" src="/static/img/home-icon.svg">
 	</a>
 
 	<!-- Table holding card for each project -->
