Move blog to dedicated folder, prepare for cloud run deployment

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
 
         </div>
 
+        <!-- Link to blog subdomain -->
+        <div class="icon-container" id="blog-icon">
+
+            <!-- Icon -->
+            <div class="icon-img-wrapper">
+                <img class="icon-img" src="/static/img/index/blog_icon.svg"/>
+            </div>
+
+            <!-- Text -->
+            <p id="blog-label"><span class="label-text">&nbsp;blog&nbsp;</span></p>
+
+        </div>
+
     </div>
 
 </body>
