add support page, update some things

--- a/index.html
+++ b/index.html
@@ -83,16 +83,15 @@
             <p class="icon-text">Blog</p>
         </div>
 
-        <!-- Hire icon -->
-        <div class="icon" id="icon-hire">
-            <img class="icon-img" src="/static/img/index/icon-hire.png"/>
-            <p class="icon-text">Hire Me</p>
+        <!-- Support icon -->
+        <div class="icon" id="icon-support">
+            <img class="icon-img" src="/static/img/index/icon-support.png"/>
+            <p class="icon-text">Support Me</p>
         </div>
 
     </div>
 
     <div id="links-panel">
-        <a target="_blank" href="https://www.twitter.com/partlygloudy">Twitter</a>
         <a target="_blank" href="https://www.github.com/partlygloudy">GitHub</a>
         <a target="_blank" href="https://www.linkedin.com/in/jake-gloudemans-a56608133/">LinkedIn</a>
         <a href="mailto:jake.gloudemans@gmail.com">Email</a>
