dumb little updates

--- a/support.html
+++ b/support.html
@@ -48,9 +48,9 @@
             <h1 id="card-title">Support my business for $1</h1>
 
             <p class="card-text-section">I'm trying to start a business! I am currently working through a 30-day challenge that's giving actionable steps on how to get started. Mission #1 is to earn my first dollar. Your support would mean a lot!</p>
-            <p class="card-text-section">This purchase is really just a token of your support, however I can also offer:</p>
+            <p class="card-text-section">This purchase is really just a token of your support, however you will also receive:</p>
             <ul class="card-ul">
-                <li class="card-li">A weekly progress update via email</li>
+                <li class="card-li">A weekly progress update via email (optional)</li>
                 <li class="card-li">A special secret thank-you gift at an unspecified future time</li>
                 <li class="card-li">My heartfelt gratitude</li>
             </ul>
