--- a/support.html
+++ b/support.html
@@ -15,9 +15,9 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Support My Work - Jake Gloudemans">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://jakegloudemans.com/support">
     <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://blog.jakegloudemans.com/static/img/cards/card-default.png">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
