few more format changes

--- a/fastcards.html
+++ b/fastcards.html
@@ -49,10 +49,10 @@
 
             <p class="card-text-section">Spaced repetition flashcards are indispensible for vocab acquisiton - but building out new decks is <u>tedious</u>. It's a become a mental hurdle that's <em>slowing down my progress.</em></p>
 
-            <p class="card-text-section">I'm building a tool to speed up flashcard creation. Start by pasting Spanish text on the page. Hover over any word to see a translation instantly. Click on the word to see all of its translations. Double click to instantly produce a flashcard. Export cards to any common flashcard app - Anki, Mochi, etc.</p>
+            <p class="card-text-section"><b>I'm building a tool to speed up flashcard creation.</b> Start by pasting Spanish text on the page. Hover over any word to see a translation instantly. Click on the word to see all of its translations. Double click to instantly produce a flashcard. Export cards to any common flashcard app - Anki, Mochi, etc.</p>
             <p class="card-text-section">I'm inviting you to join the beta program for this tool. This includes</p>
             <ul class="card-ul">
-                <li class="card-li"><b>Early access to the flashcard creation tool</b></li>
+                <li class="card-li"><b>Early access to the flashcard creation tool:</b></li>
                 <li class="card-li">Access to a <b>beta-testing chat</b> - <em>your feedback will directly guide improvement of the tool</em></li>
                 <li class="card-li">A video walkthrough of how to use the tool to <b>rapidly create flashcards</b></li>
             </ul>
