--- a/fastcards.html
+++ b/fastcards.html
@@ -47,7 +47,7 @@
 
             <h1 id="card-title">Flashcards are great. <em>Creating</em> flashcards isn't.</h1>
 
-            <p class="card-text-section">Spaced repetition flashcards are the gold standard for vocab acquisiton - but building out new decks is <u>tedious</u>. It's a become a mental hurdle that's <em>slowing down my progress.</em></p>
+            <p class="card-text-section">Spaced repetition flashcards are the gold standard for vocab acquisiton - but building out new decks is <u>tedious</u>. It's become a mental hurdle that's <em>slowing down my progress.</em></p>
 
             <p class="card-text-section"><b>I'm building a tool to speed up flashcard creation.</b> Start by pasting Spanish text on the page. Hover over any word to see a translation instantly. Click on the word to see all of its translations. Double click to instantly produce a flashcard. Export cards to any common flashcard app - Anki, Mochi, etc.</p>
             <p class="card-text-section">I'm inviting you to join the beta program for this tool. This includes</p>
