--- a/feedback.html
+++ b/feedback.html
@@ -50,7 +50,7 @@
             <p class="card-text-section">Building a product but can't find users to test it? Need feedback on your UI, proofreading for your writing, or people to stress test your idea?</p>
 
             <p class="card-text-section"><b>Join our product feedback community - where users earn product feedback by giving it to others.</b></p>
-            <p class="card-text-section">How does this work?</p>
+            <p class="card-text-section">How does it work?</p>
             <ul class="card-ul">
                 <li class="card-li">Earn points by testing products, giving user interviews, or recommending potential users to other community members</li>
                 <li class="card-li">Spend points to get feedback on your own products</li>
