small wording update

--- a/feedback.html
+++ b/feedback.html
@@ -47,7 +47,7 @@
 
             <h1 id="card-title">Give feedback, get feedback.</h1>
 
-            <p class="card-text-section">Building a product but can't find users to test it? Need feedback on your UI, proofreading for your writing, or people to stress test your idea?</p>
+            <p class="card-text-section">Building a product but can't find users to test it? Need feedback on your design, proofreading for your writing, or people to stress test your idea?</p>
 
             <p class="card-text-section"><b>Join our product feedback community - where users earn product feedback by giving it to others.</b></p>
             <p class="card-text-section">How does it work?</p>
