--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     </div>
 
     <div id="links-panel">
+        <a target="_blank" href="https://jakegloudemans.substack.com/?r=4ir7u&utm_campaign=pub-share-checklist">Substack</a>
         <a target="_blank" href="https://www.github.com/partlygloudy">GitHub</a>
         <a target="_blank" href="https://www.linkedin.com/in/jake-gloudemans-a56608133/">LinkedIn</a>
         <a href="mailto:jake.gloudemans@gmail.com">Email</a>
